--- a/src/devildex/theming/sphinx/devildex_sphinx_theme/static/css/devildex.css
+++ b/src/devildex/theming/sphinx/devildex_sphinx_theme/static/css/devildex.css
@@ -1,1 +1,23 @@
+.headerlink {
+    display: inline-block; 
+    text-decoration: none; 
+    margin-left: 6px;      
+    line-height: 1;        
+    vertical-align: middle;
 
+    color: transparent !important; 
+}
+
+.headerlink::before {
+    content: "#";          
+    font-size: 0.8em;      
+    color: var(--bs-link-color); 
+    display: inline;       
+    text-indent: 0;
+    text-decoration: none; 
+}
+
+.headerlink:hover::before {
+    color: var(--bs-link-hover-color); 
+    text-decoration: var(--bs-link-hover-decoration, underline); 
+}
