new script for compare_themes.py

--- a/src/devildex/theming/sphinx/devildex_sphinx_theme/static/css/devildex.css
+++ b/src/devildex/theming/sphinx/devildex_sphinx_theme/static/css/devildex.css
@@ -21,6 +21,7 @@
     text-decoration: var(--bs-link-hover-decoration, underline);
 }
 
-.page-index main section > section:has(.toctree-wrapper) {
+/*.page-index main section > section:has(.toctree-wrapper) {
     display: none;
 }
+*/
