--- a/src/devildex/theming/devildex_pdoc3_theme/static/pdoc3_devildex.css
+++ b/src/devildex/theming/devildex_pdoc3_theme/static/pdoc3_devildex.css
@@ -81,6 +81,7 @@ details > summary {
     margin-bottom: 0.5rem;
     font-size: 0.9rem;
 }
+
 details > summary:hover {
     color: var(--bs-link-hover-color);
 }
@@ -90,7 +91,7 @@ details > summary:hover {
    ========================================================================== */
 
 .admonition {
-    padding: 1rem 1rem;
+    padding: 1rem;
     margin-bottom: 1rem;
     border: 1px solid transparent;
     border-radius: 0.375rem;
@@ -106,6 +107,7 @@ details > summary:hover {
     background-color: #cff4fc;
     border-color: #b6effb;
 }
+
 .admonition.note .admonition-title {
     color: inherit;
 }
