--- a/src/devildex/theming/devildex_pdoc3_theme/static/pygments.css
+++ b/src/devildex/theming/devildex_pdoc3_theme/static/pygments.css
@@ -1,9 +1,9 @@
 pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
 span.linenos { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
-td.linenos .special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
-span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
-.highlight .hll { background-color: #ffffcc }
+td.linenos .special { color: #000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
+span.linenos.special { color: #000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
+.highlight .hll { background-color: #ffc }
 .highlight { background: #f8f8f8; }
 .highlight .c { color: #8F5902; font-style: italic } /* Comment */
 .highlight .err { color: #A40000; border: 1px solid #EF2929 } /* Error */
